--- a/Dive Hard Game/Dive Hard Game.csproj
+++ b/Dive Hard Game/Dive Hard Game.csproj
@@ -300,7 +300,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Resources\NewBehaviourScript.cs" />
+    <Compile Include="Assets\Scripts\InGameObjects.cs" />
+    <Compile Include="Assets\Scripts\Paloma.cs" />
+    <Compile Include="Assets\Scripts\Player.cs" />
+    <Compile Include="Assets\Scripts\Singleton.cs" />
+    <Compile Include="Assets\Scripts\StoreObjectsParent.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Packages\com.unity.package-manager-ui\Editor\Resources\Styles\Main_Dark.uss" />
