--- a/Dive Hard Game/Dive Hard Game.csproj
+++ b/Dive Hard Game/Dive Hard Game.csproj
@@ -334,9 +334,9 @@
     <Compile Include="Assets\Pre proyect\PortalGun\PortalGun.cs" />
     <Compile Include="Assets\Pre proyect\Scripts\Camara.cs" />
     <Compile Include="Assets\Pre proyect\Scripts\Lanzador.cs" />
-    <Compile Include="Assets\Pre proyect\Scripts\SeguidorPJ.cs" />
     <Compile Include="Assets\Pre proyect\Scripts\SpeedCounter.cs" />
     <Compile Include="Assets\Pre proyect\Scripts\SpriteDinamico.cs" />
+    <Compile Include="Assets\Pre proyect\Sprites\SeguidorPJ.cs" />
     <Compile Include="Assets\Scripts\AltimeterSlider.cs" />
     <Compile Include="Assets\Scripts\Botones.cs" />
     <Compile Include="Assets\Scripts\Floor.cs" />
